# minieff

./: CHANGELOG.md  LICENSE  cabal.project  minieff.cabal
src/: Example.hs  MiniEff.hs  MyLib.hs
src/Data/: OpenUnion.hs
src/IxEff/: Internal.hs
src/MiniEff/: Coroutines.hs  Internal.hs  Reader.hs  State.hs  Writer.hs
test/: FreerSimple.hs  MiniEffTest.hs  PolysemyTest.hs  TestMain.hs
