cabal-version:      3.0
name:               minieff
version:            0.1.0.0
synopsis:
license:            MIT
license-file:       LICENSE
author:             Fendor
maintainer:         power.walross@gmail.com
extra-source-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wredundant-constraints

common exts
  default-extensions:
    NoMonomorphismRestriction
    DataKinds
    FlexibleContexts
    GADTs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    ScopedTypeVariables
    TypeApplications
    TypeOperators

library
  import:           warnings, exts
  exposed-modules:
    Data.OpenUnion
    IxEff.Internal
    MiniEff
    MiniEff.Coroutines
    MiniEff.Internal
    MiniEff.Reader
    MiniEff.State
    MiniEff.Writer

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                  ^>=4.14.3.0
    , first-class-families
    , free

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite minieff-test
  import:           exts, warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          TestMain.hs
  ghc-options:      -fplugin=Polysemy.Plugin
  other-modules:
    FreerSimple
    MiniEffTest
    PolysemyTest

  build-depends:
    , base             ^>=4.14.3.0
    , freer-simple
    , minieff
    , polysemy
    , polysemy-plugin
